examples/manifests/assistant-proxy/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: assistant-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assistant-proxy
  template:
    metadata:
      labels:
        app: assistant-proxy
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: assistant-proxy
          ports:
            - containerPort: 8321
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'quay.io/gnunn/assistant-proxy:test'
          volumeMounts:
            - name: openshift-service-ca
              mountPath: /etc/ssl/certs
            - name: assistant-proxy-tools
              mountPath: /app/config
              readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
        - name: openshift-service-ca
          configMap:
            name: openshift-service-ca.crt
        - name: assistant-proxy-tools
          secret:
            secretName: assistant-proxy-tools
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
