examples/manifests/assistant-proxy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: assistant-proxy
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: assistant-proxy
